# sacct-plot

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
src/sacct_plot/: __init__.py  __main__.py  plot.py  sacct.py  sweep.py
tests/: test_cli.py  test_sacct.py  test_sweep.py
