[project]
name = "sacct-plot"
version = "0.1.0"
description = "Visualize instantaneous allocated resources (CPUs/GPUs) on Slurm clusters over time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "cmdkit>=2.7.1",
    "pandas>=2",
    "pyarrow>=23",
    "plot-cli",
]

[project.scripts]
sacct-plot = "sacct_plot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sacct_plot"]

[tool.uv.sources]
plot-cli = { path = "/home/glentner/.local/repo/plot-cli", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
